<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_LicenseType" Id="{e7018c37-91ce-4e30-a9db-eff143e04c16}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_LicenseType :
(
    NoType := 0,
    ValidLicenses,
    PendingLicenses,
    DemoLicenses,
    OemLicenses,
    FailedLicenses,
    InvalidLicenses
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>