<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AllLicensesInfos" Id="{63b0b03c-e158-43e7-940b-0adc705280ec}">
    <Declaration><![CDATA[TYPE ST_AllLicensesInfos :
STRUCT
    
    ValidLicenses   : ST_LicenseDetails;
    PendingLicenses : ST_LicenseDetails;
    DemoLicenses    : ST_LicenseDetails;
    OemLicenses     : ST_LicenseDetails;
    FailedLicenses  : ST_LicenseDetails;
    InvalidLicenses : ST_LicenseDetails;
    
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>