<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_LicenseDetailsSmall" Id="{72cecc14-161a-44d4-b31d-838b5c643405}">
    <Declaration><![CDATA[TYPE ST_LicenseDetailsSmall :
STRUCT
    Count : UDINT;
    Info : ARRAY[1..10] OF ST_TcOnlineLicenseInfoDataEx; // Tc2_Utilities.nMaxLicenses
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>