<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="T_JsonDocLicenseInfoSmall" Id="{60b160d4-41e4-4d27-8923-4f7afba7eb0e}">
    <Declaration><![CDATA[TYPE T_JsonDocLicenseInfoSmall : STRING(30_000); END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>